Backport fix for bug 102238 (Random play is not random between starts) to KDE 3.4.

BUG:102238

svn path=/branches/KDE/3.4/kdemultimedia/juk/; revision=450395